name:                mealstrom
version:             0.0.0.1
synopsis:            Manipulate FSMs and store them in PostgreSQL.
homepage:            https://github.com/linearray/mealstrom
bug-reports:         https://github.com/linearray/mealstrom/issues
description:

    Mealstrom is a library that allows you to work with Mealy machines,
    a kind of finite-state machine, in Haskell using PostgreSQL for
    persistence.

license:             MIT
license-file:        LICENSE
author:              Max Amanshauser
maintainer:          max@lambdalifting.org
copyright:           Copyright (c) Max Amanshauser 2016
category:            Database, Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base              >=4.8       && <4.10
                     , aeson             >= 0.11.2.0 && < 1.1
                     , async             >= 2.1.0    && < 2.2
                     , bytestring        >= 0.10.8.1 && < 0.11
                     , containers        >= 0.5.8.1  && < 0.6
                     , hashable          >= 1.2.4    && < 1.3
                     , list-t            >= 1        && < 2
                     , postgresql-simple >= 0.5.1.2  && < 0.6
                     , resource-pool     >= 0.2.3.2  && < 0.3
                     , stm               >= 2.4.4.1  && < 2.5
                     , stm-containers    >= 0.2.15   && < 0.3
                     , text              >= 1.2.2.1  && < 1.3
                     , time              >= 1.6      && < 1.7
                     , uuid              >= 1.3.12   && < 1.4

  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Mealstrom.FSM,
                       Mealstrom.FSMApi,
                       Mealstrom.FSMEngine,
                       Mealstrom.FSMStore,
                       Mealstrom.FSMTable,
                       Mealstrom.MemoryStore,
                       Mealstrom.PostgresJSONStore,
                       Mealstrom.WALStore
  ghc-options:

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
                       test
  main-is:             Main.hs
  ghc-options:         -threaded -with-rtsopts=-N
  build-depends:
                       base              >= 4.8      && < 4.10
                     , aeson             >= 0.11.2.0 && < 1.1
                     , async             >= 2.1.0    && < 2.2
                     , bytestring        >= 0.10.8.1 && < 0.11
                     , hashable          >= 1.2.4    && < 1.3
                     , list-t            >= 1        && < 2
                     , postgresql-simple >= 0.5.1.2  && < 0.6
                     , resource-pool     >= 0.2.3.2  && < 0.3
                     , stm               >= 2.4.4.1  && < 2.5
                     , stm-containers    >= 0.2.15   && < 0.3
                     , text              >= 1.2.2.1  && < 1.3
                     , time              >= 1.6      && < 1.7
                     , tasty             >= 0.11.0.2 && < 0.12
                     , tasty-hunit       >= 0.9.2    && < 1.0
                     , uuid              >= 1.3.12   && < 1.4

source-repository head
  type:     git
  location: git://github.com/linearray/mealstrom.git

