cabal-version:       2.2

name:                mealstrom
version:             0.0.1.1
synopsis:            Manipulate FSMs and store them in PostgreSQL.
homepage:            https://github.com/linearray/mealstrom
bug-reports:         https://github.com/linearray/mealstrom/issues
description:

    Mealstrom is a library that allows you to work with Mealy machines,
    a kind of finite-state machine, in Haskell using PostgreSQL for
    persistence.

extra-source-files:
                     README.md
                     CHANGELOG.md
license:             MIT
license-file:        LICENSE
author:              Max Amanshauser
maintainer:          max@lambdalifting.org
copyright:           Copyright (c) Max Amanshauser 2016
category:            Database, Control
build-type:          Simple
extra-source-files:  README.md

common deps
    build-depends:
      , base              >= 4.8      && < 5.0
      , aeson             >= 1.1      && < 1.6
      , async             >= 2.1.0    && < 2.3
      , bytestring        >= 0.10.8.1 && < 0.11
      , hashable          >= 1.2.4    && < 1.4
      , deferred-folds    >= 0.9.10.1 && < 1
      , postgresql-simple >= 0.5.1.2  && < 0.7
      , resource-pool     >= 0.2.3.2  && < 0.3
      , stm               >= 2.4.4.1  && < 2.6
      , stm-containers    >= 1.0      && < 1.3
      , text              >= 1.2.2.1  && < 1.3
      , time              >= 1.6      && < 1.12
      , uuid              >= 1.3.12   && < 1.4

library
    import:             deps
    build-depends:
        containers      >= 0.5.8.1  && < 0.7
    hs-source-dirs:     src
    default-language:   Haskell2010
    exposed-modules:    Mealstrom,
                        Mealstrom.FSM,
                        Mealstrom.FSMApi,
                        Mealstrom.FSMEngine,
                        Mealstrom.FSMStore,
                        Mealstrom.FSMTable,
                        Mealstrom.MemoryStore,
                        Mealstrom.PostgresJSONStore,
                        Mealstrom.WALStore
    ghc-options:

test-suite test
    import:             deps
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    build-depends:
      , mealstrom
      , tasty           >= 0.11.0.2 && < 1.2
      , tasty-hunit     >= 0.10.0.1 && < 1.0
    other-modules:
        BasicFSM
        CounterFSM
        Exception
        FSM2FSM
        Recovery
        Timeout
        Upgrade

source-repository head
  type:     git
  location: git://github.com/linearray/mealstrom.git

